2009-01-12  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.14

2009-01-12  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-render-manager.c:
	  remove unneeded commented lines
	* src/mb/hd-comp-mgr.c:
	  fixed possible VKB issues

2009-01-12  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-render-manager.h
	* src/home/hd-switcher.c:	
	  Now stop blur transitions as soon as app is zoomed right in.
	* src/home/hd-render-manager.c:
	  Method to stop transitions early. 'front' now visible even for
	  fullscreen apps (for notifications in FS mode - eg. 'Max zoom 
	  reached'). Removed code that restacked the current focused app,
	  and now use matchbox order, pulling non-fullscreen dialogs out
	  of the blur box.
	* src/mb/hd-comp-mgr.c:
	  Now return windows before stacking so they can be stacked properly,
	  and don't blur background for fullscreen dialogs (VKB) as hdrm will 
	  leave any fullscreen window in the blurbox.
	* src/home/hd-task-navigator.c: spelling in comment.

2009-01-12  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#97083

	* src/mb/hd-comp-mgr.c: hd_comp_mgr_restack():
	  Determine and set _MB_CURRENT_APP_WINDOW every time we're
	  restacking windows.  The current_app() logic is meant to be
	  temporary until we understand better what "applications" are.

2009-01-12  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/util/hd-transition.c:
	  Make popup animation vary the anchor point to allow us to
	  continue animation even when the window changes size halfway
	  through.

2009-01-12  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-render-manager.c:
	  Recognize home applet actors and leave them wherever they are,
	  in the blur group, instead of reparenting them to the arena
	  and let them disappear forever when we go to tasw/talu mode.

2008-01-12  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/mb/hd-comp-mgr.c:
	  When a new window is mapped don't activate the desktop even if