@@ -1,3 +1,12 @@
+2009-01-12  Gordon Williams <gordon.williams@collabora.co.uk>
+
+	* src/launcher/hd-launcher.c:
+	  Added null pointer check for something that was giving me problems.
+	  Possibly only occurs when used with the wrong libs, but good to have.
+	* src/home/hd-render-manager.c:
+	  hd_render_manager_return_windows only returns 'normal' windows now
+	  status menu is raised above the Operator logo and top-left button
+
 2009-01-12  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
 
 	Release 2.2.14
